--- a/sofresh/styles.css
+++ b/sofresh/styles.css
@@ -6,7 +6,6 @@
 a {
     text-decoration: none;
     color: rgb(136, 138, 29);
-
 }
 
 body {
@@ -159,9 +158,10 @@ p {
 
 
 
-.card h3 {
+.card h3, #contactemail a, #contact p {
     padding-top: 1em;
     color: yellow;
+    background: rgb(28, 116, 199);
 }
 
 a:hover {
@@ -172,6 +172,7 @@ a:hover {
 #contact {
     background: rgb(28, 116, 199);
     min-height: 10em;
+    padding-bottom: 1em;
 }
 
 #contact h2 {
@@ -194,6 +195,23 @@ a:hover {
 #serviceh1 {
     border-bottom: rgb(136, 138, 29) 1px solid;
 }
+
+#contactemail {
+    padding-top: 0;
+    margin-bottom: 0m;
+}
+
+
+#contactphone, #contactphone:visited  {
+    font-size: 1.4em;
+    margin-bottom: 5em;
+    margin-top: 0;
+    padding-top: 0;
+    color: yellow;
+    padding-bottom: 1.5em;
+}
+
+
 
 .showcase {
     min-height: 450px;
