--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 .carsbg {
-    height: 450px;
+    height: 520px;
     width: 100%;
     background: url(cars.jpg.jpg);
     background-repeat: no-repeat;
@@ -69,7 +69,7 @@ body {
 }
 
 .boatsbg {
-    height: 450px;
+    height: 485px;
     width: 100%;
     background: url(boats.jpg);
     background-repeat: no-repeat;
@@ -80,7 +80,7 @@ body {
 }
 
 .RVbg {
-    height: 450px;
+    height: 550px;
     width: 100%;
     background: url(rvs.jpg);
     background-repeat: no-repeat;
@@ -155,6 +155,10 @@ p {
     margin-bottom: 0.4em;
     background: white;
     color: #333;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 .card h2 {
